# webauthn_rust

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-10-16-101535_create_users_and_credentials/: up.sql
src/: main.rs  session.rs  startup.rs
src/db/: db.rs
src/db_operations_repo/: mod.rs  poll_repo.rs  user_passkey_repo.rs
src/handlers/: handlers.rs  mod.rs  polls_handlers.rs
src/models/: auth.rs  mod.rs  user.rs
src/web_socket_handlers/: lobby.rs  messages.rs  mod.rs  start_connection.rs  ws.rs
