[package]
name = "backend_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
webauthn-rs = {version ="0.5.0" ,features = ["danger-allow-state-serialisation"]} 
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tokio-postgres = {version = "0.7.12" , features = ["with-uuid-1","with-serde_json-1"]} 
actix-web = "4.9.0"
webauthn-rs-proto = "0.5.0"
webauthn-rs-core = "0.5.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
log = "0.4.22"
postgres-native-tls = "0.5.0"
native-tls = "0.2.12"
postgres-types = "0.2.8"
serde_json = "1.0.128"
serde = "1.0.210"
thiserror = "1.0.64"
base64urlsafedata = "0.5.0"
serde_cbor = "0.11.2"
actix-cors = "0.7.0"
chrono = "0.4.38"
once_cell = "1.20.2"
rand = "0.8.5"
bincode = "1.3.3"
anyhow = "1.0.89"
serde_bytes = "0.11.15"
actix-web-actors = "4.3.1"
actix = "0.13.5"
async-stream = "0.3.6"
futures = "0.3.31"
actix-ws = "0.3.0"
futures-util = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false  }
bytestring = "1.3.1"
